<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context="com.assignmentone.activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name">

            </android.support.v7.widget.Toolbar>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="fill"
                app:tabMaxWidth="@dimen/tabwidth"
                app:tabMinWidth="@dimen/tabwidth"
                app:tabMode="scrollable">

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_1" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_2" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_3" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_4" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_5" />

            </android.support.design.widget.TabLayout>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:id="@+id/layout_viewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appbar">

            <android.support.v4.view.ViewPager
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/viewpager_height"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/titles"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/container"
                android:layout_marginBottom="12dp"
                android:padding="@dimen/margin_8dp" />
        </RelativeLayout>

        <View
            android:id="@+id/separator_viewpager"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/layout_viewpager"
            android:background="@android:color/black" />


        <RelativeLayout
            android:id="@+id/layout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/separator_viewpager">

            <TextView
                android:id="@+id/tv_left"
                style="@style/layout_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/textview1" />

            <TextView
                android:id="@+id/tv_center"
                style="@style/layout_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_left"
                android:layout_centerHorizontal="true"
                android:text="@string/textview2" />

            <TextView
                android:id="@+id/tv_right"
                style="@style/layout_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_center"
                android:text="@string/textview3" />
        </RelativeLayout>

        <View
            android:id="@+id/separator_textlayout"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/layout_text"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/tv_tab_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/separator_textlayout"
            android:gravity="center"
            android:padding="@dimen/margin_24dp"
            android:textSize="24sp" />

        <View
            android:id="@+id/separator_tabclick"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_tab_click"
            android:background="@android:color/black" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/separator_tabclick"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btn_red"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/red_button" />

            <Button
                android:id="@+id/btn_blue"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/blue_button" />

            <Button
                android:id="@+id/btn_green"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/green_button" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>